# periodic_trends

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  elements.csv  ionization_energies.csv  periodic_trends.py  ptable_trends.html  ptable_trends.py  pyproject.toml  requirements.txt  test.py
example_data/: ionization_energies.csv
src/: periodic_trends.py
src/periodic_trends/: __init__.py  _bokeh_tools.py  core.py
